[package]
name = "wabt"
version = "0.10.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pepyakin/wabt-rs"
homepage = "https://github.com/pepyakin/wabt-rs"
description = "Bindings to the wabt library"
categories = ["api-bindings"]
keywords = ["tools", "webassembly", "wasm"]
edition = "2018"

[dependencies]
wabt-sys = { path = "wabt-sys", version = "0.8" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
