[package]
name = "wabt-sys"
version = "0.5.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pepyakin/wabt-rs"
homepage = "https://github.com/pepyakin/wabt-rs"
description = "Bindings to the wabt library"
categories = ["external-ffi-bindings"]
keywords = ["tools", "webassembly", "wasm"]

[build-dependencies]
cmake = "0.1.32"
cc = "1.0.4"
